--- a/social_media_api/requirements.txt
+++ b/social_media_api/requirements.txt
@@ -1,6 +1,10 @@
-# requirements.txt
-Django==4.2.7
+Django==4.2.11
 djangorestframework==3.14.0
-django-cors-headers==4.2.0
-Pillow==10.1.0
+django-cors-headers==4.3.1
 django-filter==23.5
+python-decouple==3.8
+dj-database-url==2.1.0
+whitenoise==6.6.0
+gunicorn==21.2.0
+psycopg2-binary==2.9.9
+Pillow==10.2.0
